# MuSA

./: LICENSE  README.md  pyproject.toml
sarcbench/: generator_map_functions.py
scripts/: run_sarcasm_bench.py  write_log_to_dataset.py
